# aoc2022

./: Cargo.toml
src/: lib.rs  main.rs
src/day1/: mod.rs
src/day10/: mod.rs  parser.pest
src/day11/: mod.rs  parser.pest
src/day12/: mod.rs
src/day2/: mod.rs
src/day25/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: commands.pest  mod.rs
src/day8/: mod.rs
