[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
iter_tools = "0.1.4"
once_cell = "1.17.0"
pest = "2"
pest_derive = "2"
regex = "1.7.0"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.3"
